# infra

./: .ansible-lint  .env.secrets.tpl  .envrc  .gitignore  .pre-commit-config.yaml  .prettierrc.toml  Makefile  Pulumi.yaml  README.md  ansible.cfg  devbox.json  flake.nix  pulumi.py  pyproject.toml  renovate.json  vendir.lock.yml  vendir.yml
.github/workflows/: lint.yaml
inventory/: 01-hcloud.yaml  02-proxmox.yaml  03-onepassword.yaml  chandler.proxmox.yaml  proxmox.yaml  virgil.proxmox.yaml
inventory/group_vars/: _service_kopia.yaml.tpl  proxmox_nodes.yaml  service_plex.yaml  service_tailscale.yaml  unifi.yaml
inventory/group_vars/all/: domain.yaml  secrets.yaml.tpl  unattended_upgrades.yaml
inventory/host_vars/: _host.yaml.tpl
plays/: _pre.yaml  all.yaml  backup.yaml  basic.yaml  compose-hosts.yaml  compose_hosts.yaml  fileservers.yaml  hetzner.yaml  hetzner_server.yaml  kopia_client.yaml  kopia_server.yaml  networking.yaml  proxmox-guests.yaml  proxmox-nodes.yaml  proxmox_guests.yaml  server.yaml  services.yaml  unattended_upgrades.yaml
plays/infra/: hetzner.yaml  server.yaml
plays/one-off/: kopia_cleanup.yaml
plugins/filter/: format.py  from_markdown.py  mandatory.py  test_format.py  test_from_markdown.py  test_mandatory.py
plugins/inventory/: onepassword.py  test_onepassword.py
roles/1password/tasks/: main.yaml  refresh-gpg-key.yaml
roles/alloy/defaults/: main.yaml
roles/alloy/files/: alloy-override.conf
roles/alloy/handlers/: main.yaml
roles/alloy/tasks/: main.yml
roles/basic/tasks/: main.yaml
roles/certbot/defaults/: main.yaml
roles/certbot/tasks/: main.yaml
roles/containers/handlers/: main.yaml
roles/containers/tasks/: lazydocker.yaml  main.yaml  redir.yaml
roles/ctrld/defaults/: main.yaml
roles/ctrld/handlers/: main.yaml
roles/ctrld/tasks/: configure.yaml  install.yaml  main.yaml
roles/fileserver/defaults/: main.yaml
roles/fileserver/handlers/: main.yml
roles/fileserver/tasks/: avahi.yaml  main.yaml  nfs.yaml  samba.yaml  sanoid.yaml
roles/kopia/tasks/: main.yaml
roles/kopia_client/defaults/: main.yaml
roles/kopia_client/tasks/: main.yaml
roles/kopia_server/defaults/: main.yaml
roles/kopia_server/tasks/: certbot.yaml  collector.yaml  install.yaml  main.yaml
roles/mailx/defaults/: main.yaml
roles/mailx/tasks/: main.yml
roles/mailx/templates/: mailrc.j2
roles/nextdns/defaults/: main.yaml
roles/nextdns/handlers/: main.yaml
roles/nextdns/tasks/: main.yaml
roles/plex/defaults/: main.yaml
scripts/nextdns_rewrite/: Makefile  conftest.py  rewrite.py
stubs/ansible/: errors.py
stubs/pve_exporter/: collector.py  config.py
(+132 files in other folders)
